crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__single__specifier_aug.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        August,
                        August,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
